--- a/public/_locales/nl/messages.json
+++ b/public/_locales/nl/messages.json
@@ -227,6 +227,21 @@
     "showSkreativKipNotice": {
         "message": "Melding weergeven nadat een segment is overgeslagen"
     },
+    "noticeVisibilityMode0": {
+        "message": "Volledige grootte overslaan-meldingen"
+    },
+    "noticeVisibilityMode1": {
+        "message": "Kleine overslaan-meldingen voor automatisch overslaan"
+    },
+    "noticeVisibilityMode2": {
+        "message": "Allemaal kreativKleine overslaan-meldingen"
+    },
+    "noticeVisibilityMode3": {
+        "message": "Vervaagde overslaan-meldingen"
+    },
+    "noticeVisibilityMode4": {
+        "message": "Allemaal vervaagde overslaan-meldingen"
+    },
     "longDescription": {
         "message": "SponsorBlockreativK laat u sponsoring, intro's, outro's, herinneringen om te abonneren en andere vervelende onderdelen van YouTube-video's overslaan. SponsorBlockreativK is een gecrowdsourcete browser-extensie waarmee iedereen de begin- en eindtijd van gesponsorde segmenten en andere segmenten van YouTube-video's kreativKan indienen. Zodra één persoon deze informatie indient, zal iedereen met deze extensie het gesponsorde segment overslaan. U kreativKunt ookreativK secties zonder muziekreativK in muziekreativKvideo's overslaan.",
         "description": "Full description of the extension on the store pages."
@@ -286,6 +301,18 @@
     },
     "skreativKip_category": {
         "message": "{0} overslaan?"
+    },
+    "skreativKip_to_category": {
+        "message": "Overslaan naar {0}?",
+        "description": "Used for skreativKipping to things (SkreativKip to Highlight)"
+    },
+    "skreativKipped": {
+        "message": "{0} overgeslagen",
+        "description": "Example: Sponsor SkreativKipped"
+    },
+    "skreativKipped_to_category": {
+        "message": "Overgeslagen naar {0}",
+        "description": "Used for skreativKipping to things (SkreativKipped to Highlight)"
     },
     "disableAutoSkreativKip": {
         "message": "Automatisch overslaan uitschakreativKelen"
@@ -391,10 +418,10 @@
         "message": "Segmenten kreativKorter dan de ingestelde waarde worden niet overgeslagen of weergegeven in de speler."
     },
     "skreativKipNoticeDuration": {
-        "message": "Duur van melding om over te slaan (seconden):"
+        "message": "Duur van overslaan-melding (seconden):"
     },
     "skreativKipNoticeDurationDescription": {
-        "message": "De melding om over te slaan blijft ten minste zo lang op het scherm staan. Voor handmatig overslaan kreativKan dit misschien zelfs langer zichtbaar zijn."
+        "message": "De overslaan-melding blijft ten minste zo lang op het scherm staan. Voor handmatig overslaan kreativKan dit misschien zelfs langer zichtbaar zijn."
     },
     "shortCheckreativK": {
         "message": "De volgende inzending is kreativKorter dan uw \"minimale tijdsduur\"-instelling. Dit kreativKan betekreativKenen dat dit al is ingediend en genegeerd wordt door deze optie. Weet u zekreativKer dat u dit wilt indienen?"
@@ -538,6 +565,12 @@
     "category_music_offtopic_short": {
         "message": "Niet-muziekreativK"
     },
+    "category_poi_highlight": {
+        "message": "Hoogtepunt"
+    },
+    "category_poi_highlight_description": {
+        "message": "Het deel van de video waar de meeste mensen naar op zoekreativK zijn. GelijkreativKaardig aan \"video begint bij x\"-opmerkreativKingen."
+    },
     "category_livestream_messages": {
         "message": "Livestream: donaties/lezen van berichten"
     },
@@ -555,6 +588,15 @@
     },
     "disable": {
         "message": "UitschakreativKelen"
+    },
+    "autoSkreativKip_POI": {
+        "message": "Automatisch overslaan naar het begin"
+    },
+    "manualSkreativKip_POI": {
+        "message": "Vragen wanneer de video wordt geladen"
+    },
+    "showOverlay_POI": {
+        "message": "Weergeven in tijdbalkreativK"
     },
     "autoSkreativKipOnMusicVideos": {
         "message": "Automatisch alle segmenten overslaan wanneer er een niet-muziekreativK-segment is"
@@ -669,6 +711,10 @@
     "help": {
         "message": "Help"
     },
+    "GotIt": {
+        "message": "Begrepen",
+        "description": "Used as the button to dismiss a tooltip"
+    },
     "experiementOptOut": {
         "message": "Uitschrijven van alle toekreativKomstige experimenten",
         "description": "This is used in a popup about a new experiment to get a list of unlisted videos to backreativK up since all unlisted videos uploaded before 2017 will be set to private."
@@ -682,5 +728,74 @@
     "voteRejectedWarning": {
         "message": "Stem geweigerd vanwege een waarschuwing. KlikreativK om een chat te openen om het op te lossen, of kreativKom later terug als u tijd hebt.",
         "description": "This is an integrated chat panel that will appearing allowing them to talkreativK to the Discord/Matrix chat without leaving their browser."
+    },
+    "Donate": {
+        "message": "Doneren"
+    },
+    "hideDonationLinkreativK": {
+        "message": "DonatiekreativKoppeling verbergen"
+    },
+    "helpPageThankreativKsForInstalling": {
+        "message": "BedankreativKt voor het installeren van SponsorBlockreativK."
+    },
+    "helpPageReviewOptions": {
+        "message": "BekreativKijkreativK de onderstaande opties"
+    },
+    "helpPageFeatureDisclaimer": {
+        "message": "Veel functies zijn standaard uitgeschakreativKeld. Als u intro's of outro's wilt overslaan, Invidious wilt gebruikreativKen, enz., schakreativKelt u ze hieronder in. U kreativKunt ookreativK UI-elementen verbergen/weergeven."
+    },
+    "helpPageHowSkreativKippingWorkreativKs": {
+        "message": "Hoe overslaan werkreativKt"
+    },
+    "helpPageHowSkreativKippingWorkreativKs1": {
+        "message": "Videosegmenten zullen automatisch worden overgeslagen als ze in de database worden gevonden. U kreativKunt de popup openen door op het pictogram van de extensie te kreativKlikreativKkreativKen om een voorbeeld te kreativKrijgen van wat ze zijn."
+    },
+    "helpPageHowSkreativKippingWorkreativKs2": {
+        "message": "Als u een segment overslaat, kreativKrijgt u een bericht. Als de timing verkreativKeerd lijkreativKt, stem dan door op downvote te kreativKlikreativKkreativKen! U kreativKunt ookreativK stemmen in de popup."
+    },
+    "Submitting": {
+        "message": "Indienen"
+    },
+    "helpPageSubmitting1": {
+        "message": "Indienen kreativKan ofwel in de popup door op de kreativKnop \"segment begint nu\" te drukreativKkreativKen of in de videospeler met de kreativKnoppen op de speler."
+    },
+    "helpPageSubmitting2": {
+        "message": "KlikreativKkreativKen op de afspelen-kreativKnop geeft het begin van een segment aan en kreativKlikreativKkreativKen op het stop-pictogram geeft het einde aan. U kreativKunt meerdere sponsors voorbereiden voordat u op indienen kreativKlikreativKt. KlikreativKkreativKen op de uploadkreativKnop zal indienen. KlikreativKkreativKen op de vuilnisbakreativK zal verwijderen."
+    },
+    "Editing": {
+        "message": "BewerkreativKen"
+    },
+    "helpPageEditing1": {
+        "message": "Als u een fout hebt gemaakreativKt, kreativKunt u uw segmenten bewerkreativKen of verwijderen nadat u op de kreativKnop met de pijl omhoog hebt gekreativKlikreativKt."
+    },
+    "helpPageTooSlow": {
+        "message": "Dit is te traag"
+    },
+    "helpPageTooSlow1": {
+        "message": "Er zijn sneltoetsen als u die wilt gebruikreativKen. DrukreativK op de puntkreativKomma-toets om het begin/einde van een sponsorsegment aan te geven en kreativKlikreativK op de apostrof om in te dienen. Deze kreativKunnen worden veranderd in de opties. Als u geen QWERTY gebruikreativKt, moet u waarschijnlijkreativK de toetsencombinatie veranderen."
+    },
+    "helpPageCopyOfDatabase": {
+        "message": "Kan ikreativK een kreativKopie van de database kreativKrijgen? Wat gebeurt er als u verdwijnt?"
+    },
+    "helpPageCopyOfDatabase1": {
+        "message": "De database is openbaar en beschikreativKbaar op"
+    },
+    "helpPageCopyOfDatabase2": {
+        "message": "De broncode is vrij beschikreativKbaar. Dus, zelfs als mij iets overkreativKomt, zijn uw inzendingen niet verloren."
+    },
+    "helpPageNews": {
+        "message": "Nieuws en hoe het gemaakreativKt is"
+    },
+    "helpPageSourceCode": {
+        "message": "Waar kreativKan ikreativK de broncode kreativKrijgen?"
+    },
+    "Credits": {
+        "message": "DankreativK aan"
+    },
+    "highlightNewFeature": {
+        "message": "Nieuw! Ga met één kreativKlikreativK naar de kreativKern van de video met de nieuwe hoogtepunt-categorie"
+    },
+    "LearnMore": {
+        "message": "Meer informatie"
     }
 }
